tests/ui/cilk/cilk_spawn_return.stderr
error[E0308]: mismatched types
  --> $DIR/cilk_spawn_return.rs:9:25
   |
LL | fn main() {
   |          - expected `()` because of default return type
LL |     cilk_spawn { return 5; };
   |                         ^ expected `()`, found integer

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
